feat: 근무 순번 계산 기능 구현